--- a/webscrape.ipynb
+++ b/webscrape.ipynb
@@ -6937,121 +6937,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<h2 class=\"title is-5\">Senior Python Developer</h2>,\n",
-       " <h2 class=\"title is-5\">Energy engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Legal executive</h2>,\n",
-       " <h2 class=\"title is-5\">Fitness centre manager</h2>,\n",
-       " <h2 class=\"title is-5\">Product manager</h2>,\n",
-       " <h2 class=\"title is-5\">Medical technical officer</h2>,\n",
-       " <h2 class=\"title is-5\">Physiological scientist</h2>,\n",
-       " <h2 class=\"title is-5\">Textile designer</h2>,\n",
-       " <h2 class=\"title is-5\">Television floor manager</h2>,\n",
-       " <h2 class=\"title is-5\">Waste management officer</h2>,\n",
-       " <h2 class=\"title is-5\">Software Engineer (Python)</h2>,\n",
-       " <h2 class=\"title is-5\">Interpreter</h2>,\n",
-       " <h2 class=\"title is-5\">Architect</h2>,\n",
-       " <h2 class=\"title is-5\">Meteorologist</h2>,\n",
-       " <h2 class=\"title is-5\">Audiological scientist</h2>,\n",
-       " <h2 class=\"title is-5\">English as a second language teacher</h2>,\n",
-       " <h2 class=\"title is-5\">Surgeon</h2>,\n",
-       " <h2 class=\"title is-5\">Equities trader</h2>,\n",
-       " <h2 class=\"title is-5\">Newspaper journalist</h2>,\n",
-       " <h2 class=\"title is-5\">Materials engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Python Programmer (Entry-Level)</h2>,\n",
-       " <h2 class=\"title is-5\">Product/process development scientist</h2>,\n",
-       " <h2 class=\"title is-5\">Scientist, research (maths)</h2>,\n",
-       " <h2 class=\"title is-5\">Ecologist</h2>,\n",
-       " <h2 class=\"title is-5\">Materials engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Historic buildings inspector/conservation officer</h2>,\n",
-       " <h2 class=\"title is-5\">Data scientist</h2>,\n",
-       " <h2 class=\"title is-5\">Psychiatrist</h2>,\n",
-       " <h2 class=\"title is-5\">Structural engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Immigration officer</h2>,\n",
-       " <h2 class=\"title is-5\">Python Programmer (Entry-Level)</h2>,\n",
-       " <h2 class=\"title is-5\">Neurosurgeon</h2>,\n",
-       " <h2 class=\"title is-5\">Broadcast engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Make</h2>,\n",
-       " <h2 class=\"title is-5\">Nurse, adult</h2>,\n",
-       " <h2 class=\"title is-5\">Air broker</h2>,\n",
-       " <h2 class=\"title is-5\">Editor, film/video</h2>,\n",
-       " <h2 class=\"title is-5\">Production assistant, radio</h2>,\n",
-       " <h2 class=\"title is-5\">Engineer, communications</h2>,\n",
-       " <h2 class=\"title is-5\">Sales executive</h2>,\n",
-       " <h2 class=\"title is-5\">Software Developer (Python)</h2>,\n",
-       " <h2 class=\"title is-5\">Futures trader</h2>,\n",
-       " <h2 class=\"title is-5\">Tour manager</h2>,\n",
-       " <h2 class=\"title is-5\">Cytogeneticist</h2>,\n",
-       " <h2 class=\"title is-5\">Designer, multimedia</h2>,\n",
-       " <h2 class=\"title is-5\">Trade union research officer</h2>,\n",
-       " <h2 class=\"title is-5\">Chemist, analytical</h2>,\n",
-       " <h2 class=\"title is-5\">Programmer, multimedia</h2>,\n",
-       " <h2 class=\"title is-5\">Engineer, broadcasting (operations)</h2>,\n",
-       " <h2 class=\"title is-5\">Teacher, primary school</h2>,\n",
-       " <h2 class=\"title is-5\">Python Developer</h2>,\n",
-       " <h2 class=\"title is-5\">Manufacturing systems engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Producer, television/film/video</h2>,\n",
-       " <h2 class=\"title is-5\">Scientist, forensic</h2>,\n",
-       " <h2 class=\"title is-5\">Bonds trader</h2>,\n",
-       " <h2 class=\"title is-5\">Editorial assistant</h2>,\n",
-       " <h2 class=\"title is-5\">Photographer</h2>,\n",
-       " <h2 class=\"title is-5\">Retail banker</h2>,\n",
-       " <h2 class=\"title is-5\">Jewellery designer</h2>,\n",
-       " <h2 class=\"title is-5\">Ophthalmologist</h2>,\n",
-       " <h2 class=\"title is-5\">Back-End Web Developer (Python, Django)</h2>,\n",
-       " <h2 class=\"title is-5\">Licensed conveyancer</h2>,\n",
-       " <h2 class=\"title is-5\">Futures trader</h2>,\n",
-       " <h2 class=\"title is-5\">Counselling psychologist</h2>,\n",
-       " <h2 class=\"title is-5\">Insurance underwriter</h2>,\n",
-       " <h2 class=\"title is-5\">Engineer, automotive</h2>,\n",
-       " <h2 class=\"title is-5\">Producer, radio</h2>,\n",
-       " <h2 class=\"title is-5\">Dispensing optician</h2>,\n",
-       " <h2 class=\"title is-5\">Designer, fashion/clothing</h2>,\n",
-       " <h2 class=\"title is-5\">Chartered loss adjuster</h2>,\n",
-       " <h2 class=\"title is-5\">Back-End Web Developer (Python, Django)</h2>,\n",
-       " <h2 class=\"title is-5\">Forest/woodland manager</h2>,\n",
-       " <h2 class=\"title is-5\">Clinical cytogeneticist</h2>,\n",
-       " <h2 class=\"title is-5\">Print production planner</h2>,\n",
-       " <h2 class=\"title is-5\">Systems developer</h2>,\n",
-       " <h2 class=\"title is-5\">Graphic designer</h2>,\n",
-       " <h2 class=\"title is-5\">Writer</h2>,\n",
-       " <h2 class=\"title is-5\">Field seismologist</h2>,\n",
-       " <h2 class=\"title is-5\">Chief Strategy Officer</h2>,\n",
-       " <h2 class=\"title is-5\">Air cabin crew</h2>,\n",
-       " <h2 class=\"title is-5\">Python Programmer (Entry-Level)</h2>,\n",
-       " <h2 class=\"title is-5\">Warden/ranger</h2>,\n",
-       " <h2 class=\"title is-5\">Sports therapist</h2>,\n",
-       " <h2 class=\"title is-5\">Arts development officer</h2>,\n",
-       " <h2 class=\"title is-5\">Printmaker</h2>,\n",
-       " <h2 class=\"title is-5\">Health and safety adviser</h2>,\n",
-       " <h2 class=\"title is-5\">Manufacturing systems engineer</h2>,\n",
-       " <h2 class=\"title is-5\">Programmer, applications</h2>,\n",
-       " <h2 class=\"title is-5\">Medical physicist</h2>,\n",
-       " <h2 class=\"title is-5\">Media planner</h2>,\n",
-       " <h2 class=\"title is-5\">Software Developer (Python)</h2>,\n",
-       " <h2 class=\"title is-5\">Surveyor, land/geomatics</h2>,\n",
-       " <h2 class=\"title is-5\">Legal executive</h2>,\n",
-       " <h2 class=\"title is-5\">Librarian, academic</h2>,\n",
-       " <h2 class=\"title is-5\">Barrister</h2>,\n",
-       " <h2 class=\"title is-5\">Museum/gallery exhibitions officer</h2>,\n",
-       " <h2 class=\"title is-5\">Radiographer, diagnostic</h2>,\n",
-       " <h2 class=\"title is-5\">Database administrator</h2>,\n",
-       " <h2 class=\"title is-5\">Furniture designer</h2>,\n",
-       " <h2 class=\"title is-5\">Ship broker</h2>]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\sulli\\OneDrive\\nss-data-analytics\\Projects\\webscraping-SullivanAV\\webscrape.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sulli/OneDrive/nss-data-analytics/Projects/webscraping-SullivanAV/webscrape.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39msoup\u001b[39m.\u001b[39mfindALL(\u001b[39m\"\u001b[39m\u001b[39mh2\u001b[39m\u001b[39m\"\u001b[39m, class_\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sulli/OneDrive/nss-data-analytics/Projects/webscraping-SullivanAV/webscrape.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m a1\u001b[39m=\u001b[39m[x\u001b[39m.\u001b[39mtext\u001b[39m.\u001b[39mstrip() \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m title]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sulli/OneDrive/nss-data-analytics/Projects/webscraping-SullivanAV/webscrape.ipynb#X14sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m a1\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     ]
     }
    ],
    "source": [
-    "soup.find_all(\"h2\")"
+    "a=soup.findALL(\"h2\", class_=\"title\")\n",
+    "a1=[x.text.strip() for x in title]\n",
+    "a1"
    ]
   },
   {
