--- a/webscrape.ipynb
+++ b/webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3984,7 +3984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -6906,7 +6906,7 @@
        "</section>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6917,7 +6917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -6926,7 +6926,7 @@
        "'Senior Python Developer'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6937,7 +6937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -7045,7 +7045,7 @@
        " <h2 class=\"title is-5\">Ship broker</h2>]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7056,7 +7056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -7164,7 +7164,7 @@
        " 'Ship broker']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7177,7 +7177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -7386,7 +7386,7 @@
        " '2021-04-08']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7398,10 +7398,27 @@
     "jobt=[x.text.strip() for x in job]\n",
     "comp=[x.text.strip() for x in company]\n",
     "loca=[x.text.strip() for x in location]\n",
+    "\n",
     "jobt\n",
     "comp\n",
     "loca"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
